Update to version 2.33 of allure, add behaviors and packages plugin to core